PI-874: Pagination for registration requests (#57)
* Adapt backend for registration request pagination

* Generate typescript

* Adapt backend for registration request pagination #2

* Generate typescript

* Adapt frontend for registration request pagination

* Add sort field and sort order to pagination on backend

* Generate typescript

* Adapt endpoint

* Generate typescript

* Adapt endpoint

* Generate typescript

* Adapt frontend

* Adapt backend

* Adapt frontend tests

* Minor changes

* simplify pagination requests

* update tests

* swap custom list objects for spring pages

* remove frontend sorting

---------

Co-authored-by: M-Busk <125284318+M-Busk@users.noreply.github.com>